# zellij-smart-tabs

./: CHANGELOG.md  Cargo.toml  Makefile
src/: main.rs  tab_state.rs  template.rs  utils.rs
